deploy: fc29e2b152fcabb74b0969e9ecc7f33ae59aaeac

--- a/index.html
+++ b/index.html
@@ -2863,7 +2863,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 
 </code></pre></div>
-<p>You&#39;ll find a complete machine-readbale example of a data product from the right column. It is imaginary data product <em>Pets of the year</em> which contains derived data about the most common pets in the world. The product has 4 pricing plans which are mostly based on recurring subscription model. Note! Not all voluntary attributes are used in the example and multilingualism has not been fully applied.</p>
+<p>You&#39;ll find a complete machine-readbale example of a data product from the right column. It is imaginary data product <em>Urban Pulse</em> which contains derived data about events in the given city. The product has 4 pricing plans which are mostly based on recurring subscription model. Note! Not all voluntary attributes are used in the example and multilingualism has not been fully applied.</p>
 <h1 id='mandatory-only-example'>Mandatory-only example</h1>
 <p>Example data product with just the mandatory elements and attributes. This is the minimal representation of a data product metadata that is expected to be found from every data product following ODPS standard. This bare minimum can be expanded with other elements and attributes defined in the specification. Also the possibilty to use extensions exists if local additions are needed. </p>
 
