deploy: 12064aff7595e04296fd865b7970095ddfcc5dee

--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="na">unit</span><span class="pi">:</span> <span class="s">recurring</span>
         <span class="na">maxTransactionQuantity</span><span class="pi">:</span> <span class="m">200000</span>
         <span class="na">offering</span><span class="pi">:</span>
-          <span class="pi">-</span> <span class="s">High Quality Pets data</span>
+          <span class="pi">-</span> <span class="s">High Quality Events data</span>
           <span class="pi">-</span> <span class="s">High amount of transactions</span>
           <span class="pi">-</span> <span class="s">Billed monthly</span>
         <span class="na">paymentGateway</span><span class="pi">:</span>
@@ -1589,7 +1589,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="na">unit</span><span class="pi">:</span> <span class="s">recurring</span>
         <span class="na">maxTransactionQuantity</span><span class="pi">:</span> <span class="m">0</span>
         <span class="na">offering</span><span class="pi">:</span>
-          <span class="pi">-</span> <span class="s">High Quality Pets data</span>
+          <span class="pi">-</span> <span class="s">High Quality Events data</span>
           <span class="pi">-</span> <span class="s">High amount of transactions</span>
           <span class="pi">-</span> <span class="s">Billed monthly</span>
         <span class="na">paymentGateway</span><span class="pi">:</span>
