deploy: 6308e69457f7fb4a417cf3a39eeaffb64f2d795c

--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>default</strong></td>
 <td>object</td>
 <td>-</td>
-<td><strong>Mandatory.</strong> This object defines the default access interface and must always be present. The name <code>default</code> is fixed and used as the fallback or primary access method. <br/><br/> In the example above, you will see additional user-defined access methods (<code>dataonly</code>, <code>API</code>, <code>Agent</code>) demonstrating how various access interfaces can be added beyond the required <code>default</code>. <br/><br/> <strong>Example reference usage:</strong> <br/> <code>access: $ref: &#39;#/dataAccess/default&#39;</code></td>
+<td>This object defines the default access interface and must always be present if dataAccess object is used. The name <code>default</code> is fixed and used as the fallback or primary access method. <br/><br/> In the example above, you will see additional user-defined access methods (<code>dataonly</code>, <code>API</code>, <code>Agent</code>) demonstrating how various access interfaces can be added beyond the required <code>default</code>. <br/><br/> <strong>Example reference usage:</strong> <br/> <code>access: $ref: &#39;#/dataAccess/default&#39;</code></td>
 </tr>
 </tbody></table>
 
