deploy: f89ee0d968322a485d7d8073246dd232ee18c7ff

--- a/index.html
+++ b/index.html
@@ -2208,19 +2208,73 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>-</td>
 <td>This object defines the default access interface and must always be present if dataAccess object is used. The name <code>default</code> is fixed and used as the fallback or primary access method. <br/><br/> In the example above, you will see additional user-defined access methods (<code>dataonly</code>, <code>API</code>, <code>Agent</code>) demonstrating how various access interfaces can be added beyond the required <code>default</code>. <br/><br/> <strong>Example reference usage:</strong> <br/> <code>access: $ref: &#39;#/dataAccess/default&#39;</code></td>
 </tr>
+<tr>
+<td><strong>name</strong></td>
+<td>object</td>
+<td>ISO 639-1 language codes (e.g., <code>en</code>)</td>
+<td>Multilingual name for the access interface. Can be shown in UIs.</td>
+</tr>
+<tr>
+<td><strong>description</strong></td>
+<td>object</td>
+<td>ISO 639-1 language codes (e.g., <code>en</code>)</td>
+<td>Multilingual description for the access interface. Supports user understanding.</td>
+</tr>
+<tr>
+<td><strong>outputPorttype</strong></td>
+<td>string</td>
+<td>file, API, SQL, AI, gRPC, sFTP, etc.</td>
+<td>Describes the technical method for delivering data (e.g., <code>file</code> for file downloads, <code>API</code> for web services).</td>
+</tr>
+<tr>
+<td><strong>format</strong></td>
+<td>string</td>
+<td>JSON, XML, CSV, Excel, zip, plain text, GraphQL, MCP</td>
+<td>Specifies the data format made available through this access channel.</td>
+</tr>
+<tr>
+<td><strong>authenticationMethod</strong></td>
+<td>string</td>
+<td>OAuth, Token, API key, HTTP Basic, none</td>
+<td>Security model required to access the data.</td>
+</tr>
+<tr>
+<td><strong>specification</strong></td>
+<td>string</td>
+<td>OAS, RAML, Slate, MCP</td>
+<td>Defines the type of API or protocol specification used to describe access (e.g., OpenAPI, RAML, or a custom protocol like MCP).</td>
+</tr>
+<tr>
+<td><strong>specsURL</strong></td>
+<td>URL</td>
+<td>Valid URL</td>
+<td>Points to the machine-readable technical documentation (e.g., OpenAPI YAML).</td>
+</tr>
+<tr>
+<td><strong>accessURL</strong></td>
+<td>URL</td>
+<td>Valid URL</td>
+<td>The direct access point to retrieve the data – can be an API endpoint or a file link.</td>
+</tr>
+<tr>
+<td><strong>documentationURL</strong></td>
+<td>URL</td>
+<td>Valid URL</td>
+<td>A human-readable documentation or guide for access setup, authentication steps, or onboarding.</td>
+</tr>
+<tr>
+<td><strong>hashType</strong></td>
+<td>string</td>
+<td>SHA-1, SHA-2, SHA-256, MD5, etc.</td>
+<td>(Optional) Defines hash algorithm used when providing file integrity verification.</td>
+</tr>
+<tr>
+<td><strong>checksum</strong></td>
+<td>string</td>
+<td>any string</td>
+<td>(Optional) File hash/checksum value, useful for verifying data integrity after download.</td>
+</tr>
 </tbody></table>
-
-<p>| <strong>name</strong> | object | ISO 639-1 language codes (e.g., <code>en</code>) | Multilingual name for the access interface. Can be shown in UIs. |
-| <strong>description</strong> | object | ISO 639-1 language codes (e.g., <code>en</code>) | Multilingual description for the access interface. Supports user understanding. |
-| <strong>outputPorttype</strong> | string | file, API, SQL, AI, gRPC, sFTP, etc. | Describes the technical method for delivering data (e.g., <code>file</code> for file downloads, <code>API</code> for web services). |
-| <strong>format</strong> | string | JSON, XML, CSV, Excel, zip, plain text, GraphQL, MCP | Specifies the data format made available through this access channel. |
-| <strong>authenticationMethod</strong> | string | OAuth, Token, API key, HTTP Basic, none | Security model required to access the data. |
-| <strong>specification</strong> | string | OAS, RAML, Slate, MCP | Defines the type of API or protocol specification used to describe access (e.g., OpenAPI, RAML, or a custom protocol like MCP). |
-| <strong>specsURL</strong> | URL | Valid URL | Points to the machine-readable technical documentation (e.g., OpenAPI YAML). |
-| <strong>accessURL</strong> | URL | Valid URL | The direct access point to retrieve the data – can be an API endpoint or a file link. |
-| <strong>documentationURL</strong> | URL | Valid URL | A human-readable documentation or guide for access setup, authentication steps, or onboarding. |
-| <strong>hashType</strong> | string | SHA-1, SHA-2, SHA-256, MD5, etc. | (Optional) Defines hash algorithm used when providing file integrity verification. |
-| <strong>checksum</strong> | string | any string | (Optional) File hash/checksum value, useful for verifying data integrity after download. |</p>
 <h1 id='data-holder'>Data Holder</h1>
 <p>DataHolder <strong>Object</strong> describes the <strong>Organization legally allowed to create, develop and publish data products.</strong> </p>
 
