--- a/index.html
+++ b/index.html
@@ -1351,6 +1351,94 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>dataQuality</strong></td>
 <td>element</td>
 <td>-</td>
+<td>Contains array of data quality dimensions with optional computational monitoring object. Under this element Data Quality is divided into declarative and executable parts.</td>
+</tr>
+<tr>
+<td><strong>default</strong></td>
+<td>object</td>
+<td>-</td>
+<td>This object must always be present and named exactly <code>default</code> if dataQuality object is used. It acts as the fallback or primary data quality profile. <br/><br/>Users are free to define additional named profiles such as <code>premium</code>, <code>gold</code>, etc., in parallel to the default. <br/><br/>In the example, <code>default</code> and <code>premium</code> are both included. These variants can be referred to from other components like pricing plans. <br/><br/><strong>Example reference usage:</strong> <br/> <code>dataQuality: $ref: &#39;#/dataQuality/default&#39;</code></td>
+</tr>
+<tr>
+<td><strong>dimension</strong></td>
+<td>attribute</td>
+<td>string, one of: <em>accuracy, completeness, conformity, consistency, coverage, timeliness, validity, or uniqueness.</em></td>
+<td>Defines the data quality dimension.</td>
+</tr>
+<tr>
+<td><strong>objective</strong></td>
+<td>attribute</td>
+<td>integer</td>
+<td>Defines the target value for the data quality dimension</td>
+</tr>
+<tr>
+<td><strong>unit</strong></td>
+<td>attribute</td>
+<td>string. One of: <em>percentage, number</em></td>
+<td>Defines the unit used in stating the target quality level.</td>
+</tr>
+<tr>
+<td><strong>executable</strong></td>
+<td>element</td>
+<td>-</td>
+<td>Grouping element that collects together data quality monitoring rules. You can define monitoring patterns as code under this element for each dimension. The actual as-code part is defined in the <code>spec</code> element.</td>
+</tr>
+<tr>
+<td><strong>displaytitle</strong></td>
+<td>array</td>
+<td>-</td>
+<td>Dimension title to be shown in various UIs. Array contains title(s) in desired language(s).</td>
+</tr>
+<tr>
+<td><strong>en</strong></td>
+<td>attribute</td>
+<td><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> defined 2-letter codes</td>
+<td>Binds the text elements together in a given language. Multilanguage support is implemented by duplicating content under other ISO language codes.</td>
+</tr>
+<tr>
+<td><strong>description</strong></td>
+<td>array</td>
+<td>-</td>
+<td>Describe the dimension so that it can be used for example in info boxes in UI. Array contains descriptions in desired language(s).</td>
+</tr>
+<tr>
+<td><strong>type</strong></td>
+<td>attribute</td>
+<td>string, one of: <a href="https://docs.soda.io/soda-cl/soda-cl-overview.html">SodaCL</a>, <a href="https://docs.getmontecarlo.com/docs/monitors-as-code">Montecarlo</a>, <a href="https://dqops.com/docs/categories-of-data-quality-checks/">DQOps</a>, Custom</td>
+<td>Data Quality Monitoring as code system name. Use one of the predefined options only. With <em>Custom</em> type you can use your in-house solution.</td>
+</tr>
+<tr>
+<td><strong>version</strong></td>
+<td>attribute</td>
+<td>string</td>
+<td>The version of DQ monitoring tool used.</td>
+</tr>
+<tr>
+<td><strong>reference</strong></td>
+<td>URL</td>
+<td>Valid URL</td>
+<td>Provide URL pointing to the reference documentation.</td>
+</tr>
+<tr>
+<td><strong>spec</strong></td>
+<td>element</td>
+<td>YAML/URL/string</td>
+<td>The content for Data Quality monitoring expressed as code. Accepted as inline YAML, a valid URL pointing to YAML, or a plain string if <code>type</code> is <code>Custom</code>.</td>
+</tr>
+</tbody></table>
+
+<table><thead>
+<tr>
+<th><div style="width:150px">Element name</div></th>
+<th>Type</th>
+<th>Options</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><strong>dataQuality</strong></td>
+<td>element</td>
+<td>-</td>
 <td>Contains array of data quality dimensions with optional computational monotoring object. Under this element Data quality is divided into declarative and executable parts.</td>
 </tr>
 <tr>
@@ -2206,7 +2294,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>default</strong></td>
 <td>object</td>
 <td>-</td>
-<td>This object defines the default access interface and must always be present if dataAccess object is used. The name <code>default</code> is fixed and used as the fallback or primary access method. <br/><br/> In the example above, you will see additional user-defined access methods (<code>dataonly</code>, <code>API</code>, <code>Agent</code>) demonstrating how various access interfaces can be added beyond the required <code>default</code>. <br/><br/> <strong>Example reference usage:</strong> <br/> <code>access: $ref: &#39;#/dataAccess/default&#39;</code></td>
+<td>This object defines the default access interface and must always be present if dataAccess object is used. The name <code>default</code> is fixed and used as the fallback or primary access method. <br/><br/> In the example, you will see additional user-defined access methods (<code>dataonly</code>, <code>API</code>, <code>Agent</code>) demonstrating how various access interfaces can be added beyond the required <code>default</code>. <br/><br/> <strong>Example reference usage:</strong> <br/> <code>access: $ref: &#39;#/dataAccess/default&#39;</code></td>
 </tr>
 <tr>
 <td><strong>name</strong></td>
