--- a/index.html
+++ b/index.html
@@ -1068,13 +1068,19 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>SLA</strong></td>
 <td>element</td>
 <td>-</td>
-<td>Binds the SLA related elements and attributes together</td>
+<td>Binds the SLA-related elements and attributes together.</td>
 </tr>
 <tr>
-<td><strong>declarative</strong></td>
-<td>element</td>
+<td><strong>default</strong></td>
+<td>object</td>
 <td>-</td>
-<td>Grouping element which collects together SLA dimensions target level (objectives), name to display in UI in wanted languages, measuring unit used, and dimension name (one of standardized options).</td>
+<td>This object must always be present and named exactly <code>default</code> if SLA object is used. It acts as the fallback or baseline SLA profile. <br/><br/>Users are free to define additional named profiles such as <code>premium</code>, <code>gold</code>, etc., in parallel to the default. <br/><br/>In the example above, both <code>default</code> and <code>premium</code> profiles are included. These variants can be referenced from pricing plans or other objects. <br/><br/><strong>Example reference usage:</strong> <br/> <code>SLA: $ref: &#39;#/SLA/default&#39;</code></td>
+</tr>
+<tr>
+<td><strong>dimensions</strong></td>
+<td>array</td>
+<td>-</td>
+<td>Contains one or more SLA dimension objects. Each defines a measurable SLA metric such as uptime or responseTime.</td>
 </tr>
 <tr>
 <td><strong>dimension</strong></td>
@@ -1083,82 +1089,88 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Defines the SLA dimension.</td>
 </tr>
 <tr>
-<td><strong>unit</strong></td>
+<td><strong>objective</strong></td>
 <td>attribute</td>
-<td>Options for <em>unit</em> are: milliseconds, seconds, minutes, days, weeks, months, years, never, date, null. <br/><br/></td>
-<td>Name of the quality attribute indicating the timely interval. If date is given, format is dd/mm/yyyy</td>
+<td>integer</td>
+<td>Target level to be achieved for the dimension (e.g., 99).</td>
 </tr>
 <tr>
-<td><strong>executable</strong></td>
-<td>element</td>
-<td>-</td>
-<td>Grouping element which collects together SLA monitoring. You can define the monitoring patterns as code under this element for the above mentioned SLA dimensions. In other words, contains the monitoring (computational &quot;as code&quot;) structure to validate target state for the selected SLA dimension. The actual as code part is added with <em>spec</em> element.</td>
+<td><strong>unit</strong></td>
+<td>attribute</td>
+<td>Options: milliseconds, seconds, minutes, days, weeks, months, years, never, date, null</td>
+<td>Measurement unit for the SLA objective. If &quot;date&quot; is used, format should be dd/mm/yyyy.</td>
 </tr>
 <tr>
 <td><strong>displayTitle</strong></td>
 <td>array</td>
 <td>-</td>
-<td>Dimension title to be shown is various UIs. Keep it short and sweet.</td>
+<td>Dimension title to be shown in UIs. Localized per language.</td>
 </tr>
 <tr>
-<td><strong>en</strong></td>
-<td>attribute</td>
-<td><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> defined 2-letter codes</td>
-<td>This element binds together other product attributes and expresses the langugage used. In the example this is &quot;en&quot;, which indicates that product details are in English. If you would like to use French details, then name the element &quot;fr&quot;. The naming of this element follows options (language codes) listed in <a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> standard. <br/><br/> You can have product details in multiple languages simply by adding similar sets like the example - just change the binding element name to matching language code. <br/><br/> The pattern to implement multilanguage support for data products was adopted from de facto UI translation practices. The attributes inside this element are commonly rendered in the UI for the consumer and providing a simple way to implement that was the driving reasoning. See for example  <a href="https://simplelocalize.io/docs/file-formats/multi-language-json/">JSON - Multi Language</a></td>
+<td><strong>description</strong></td>
+<td>array</td>
+<td>-</td>
+<td>Description of the SLA package or specific dimension, localized per language.</td>
+</tr>
+<tr>
+<td><strong>executable</strong></td>
+<td>element</td>
+<td>-</td>
+<td>Grouping element for SLA monitoring logic. Monitoring definitions are provided as code in the <code>spec</code> field for each dimension.</td>
 </tr>
 <tr>
 <td><strong>type</strong></td>
 <td>attribute</td>
 <td>string</td>
-<td>monitoring system name name such as Prometheus. The system used must support as code approach to monitor SLA.</td>
+<td>Name of the monitoring system (e.g., Prometheus). Must support SLA-as-code.</td>
 </tr>
 <tr>
 <td><strong>spec</strong></td>
 <td>element</td>
 <td>YAML/URL/string</td>
-<td>The content the as code part for SLA monitoring. Content is intended to be in a form that can be injected as is to <em>type</em> defined monitoring system. Content depends of the system used and reference attribute is expected to provide more information. <br/><br/> <strong>Note!</strong> By default the rules must be provide as valid String or YAML. If YAML is used, it must be either as inline element (YAML) or as valid URL (filesystem or online) pointing to valid YAML or string content file.</td>
+<td>Monitoring logic for the defined dimension. Can be inline YAML, plain string, or URL to code file.</td>
 </tr>
 <tr>
 <td><strong>reference</strong></td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>Provide URL for the reference documentation regarding used monitoring system.</td>
+<td>Link to documentation about the monitoring system used.</td>
 </tr>
 <tr>
 <td><strong>support</strong></td>
 <td>element</td>
 <td>-</td>
-<td>Support element describes how the customer can reach for help in case of difficulties in usage, billing, or otherwise.</td>
+<td>Describes how users can get help with usage, billing, or other issues.</td>
 </tr>
 <tr>
 <td><strong>phoneNumber</strong></td>
 <td>string</td>
 <td>valid phone number</td>
-<td>The support phone number. Use <a href="https://www.itu.int/rec/T-REC-E.164/en">E.164</a></td>
+<td>The phone number for support (e.g., +971508976456). Should follow <a href="https://www.itu.int/rec/T-REC-E.164/en">E.164</a> format.</td>
 </tr>
 <tr>
 <td><strong>phoneServiceHours</strong></td>
 <td>string</td>
 <td>-</td>
-<td>Describes the service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm.</td>
+<td>Description of phone support hours, e.g., &quot;Mon–Fri 8am–4pm (GMT)&quot;.</td>
 </tr>
 <tr>
 <td><strong>email</strong></td>
 <td>string</td>
 <td>valid email address</td>
-<td>Email information for support requests. Use <a href="https://datatracker.ietf.org/doc/html/rfc2822">RFC2822</a></td>
+<td>Email address for support requests. Must follow <a href="https://datatracker.ietf.org/doc/html/rfc2822">RFC2822</a>.</td>
 </tr>
 <tr>
 <td><strong>emailServiceHours</strong></td>
 <td>string</td>
 <td>-</td>
-<td>Describes the email service hours company provides. Contains information often in week level eg Mon-Fri at 8am - 4pm.</td>
+<td>Description of email support hours.</td>
 </tr>
 <tr>
 <td><strong>documentationURL</strong></td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>URL to documentation</td>
+<td>Link to documentation describing the support process or SLA handling.</td>
 </tr>
 </tbody></table>
 
