deploy: d4f7db31c0ac637d7b3e3c436c3b9f23665f89c2

--- a/index.html
+++ b/index.html
@@ -997,13 +997,13 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <span class="na">SLA</span><span class="pi">:</span>
   <span class="na">default</span><span class="pi">:</span>
     <span class="na">name</span><span class="pi">:</span> 
-      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">The Basic SLA</span>
+      <span class="na">en</span><span class="pi">:</span> <span class="s">The Basic SLA</span>
     <span class="na">description</span><span class="pi">:</span> 
-      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">The basic SLA package</span>
+      <span class="na">en</span><span class="pi">:</span> <span class="s">The basic SLA package</span>
     <span class="na">dimensions</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">uptime</span>
         <span class="na">displaytitle</span><span class="pi">:</span>
-          <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Uptime</span>
+          <span class="na">en</span><span class="pi">:</span> <span class="s">Uptime</span>
         <span class="na">objective</span><span class="pi">:</span> <span class="m">90</span>
         <span class="na">unit</span><span class="pi">:</span> <span class="s">percent</span>
       <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">responseTime</span>
@@ -1014,13 +1014,13 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="na">unit</span><span class="pi">:</span> <span class="s">minutes</span>
   <span class="na">premium</span><span class="pi">:</span>
     <span class="na">name</span><span class="pi">:</span> 
-      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">The Premium SLA</span>
+      <span class="na">en</span><span class="pi">:</span> <span class="s">The Premium SLA</span>
     <span class="na">description</span><span class="pi">:</span> 
-      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">The Premium SLA package</span>
+      <span class="na">en</span><span class="pi">:</span> <span class="s">The Premium SLA package</span>
     <span class="na">dimensions</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">uptime</span>
         <span class="na">displaytitle</span><span class="pi">:</span>
-          <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Uptime</span>
+          <span class="na">en</span><span class="pi">:</span> <span class="s">Uptime</span>
         <span class="na">objective</span><span class="pi">:</span> <span class="m">99</span>
         <span class="na">unit</span><span class="pi">:</span> <span class="s">percent</span>
       <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">responseTime</span>
