--- a/index.html
+++ b/index.html
@@ -2182,6 +2182,10 @@ Development of the specification is under the umbrella of the Linux Foundation. 
     <span class="na">format</span><span class="pi">:</span> <span class="s">CSV</span>
     <span class="na">accessURL</span><span class="pi">:</span> <span class="s">url to file as CSV</span>
   <span class="na">API</span><span class="pi">:</span>
+    <span class="na">name</span><span class="pi">:</span>
+      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Access to API</span>
+    <span class="na">description</span><span class="pi">:</span> 
+      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">API Access to the Latest Dataset</span>
     <span class="na">outputPorttype</span><span class="pi">:</span> <span class="s">API</span>
     <span class="na">authenticationMethod</span><span class="pi">:</span> <span class="s">OAuth</span>
     <span class="na">specification</span><span class="pi">:</span> <span class="s">OAS</span>
@@ -2193,6 +2197,10 @@ Development of the specification is under the umbrella of the Linux Foundation. 
     <span class="na">documentationURL</span><span class="pi">:</span> <span class="pi">&gt;-</span> 
       <span class="s">https://data.cms.gov/provr-enrollment/docs</span>
   <span class="na">Agent</span><span class="pi">:</span> 
+    <span class="na">name</span><span class="pi">:</span>
+      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">AI Agent access to the data product</span>
+    <span class="na">description</span><span class="pi">:</span> 
+      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Provides AI agents access to the data product via MCP server.</span> 
     <span class="na">outputPorttype</span><span class="pi">:</span> <span class="s">AI</span>
     <span class="na">description</span><span class="pi">:</span> 
     <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">MCP interface for structured data access and agent interaction.</span>
