deploy: 448821f08983f9cc8630b355038a269c95aa35b9

--- a/index.html
+++ b/index.html
@@ -2276,7 +2276,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>accessURL</strong></td>
 <td>URL</td>
 <td>Valid URL</td>
-<td>The direct access point to retrieve the data – can be an API endpoint or a file link.</td>
+<td>The direct access point to retrieve the data – can be for example an API endpoint or a file link.</td>
 </tr>
 <tr>
 <td><strong>documentationURL</strong></td>
