--- a/index.html
+++ b/index.html
@@ -375,6 +375,15 @@
             <a href="#data-quality" class="toc-h1 toc-link" data-title="Data Quality">Data Quality</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#data-quality-configuration" class="toc-h2 toc-link" data-title="Data Quality Configuration">Data Quality Configuration</a>
+                  </li>
+                  <li>
+                    <a href="#referencing-capability" class="toc-h2 toc-link" data-title="Referencing Capability">Referencing Capability</a>
+                  </li>
+                  <li>
+                    <a href="#the-role-of-default" class="toc-h2 toc-link" data-title="The Role of default">The Role of <code>default</code></a>
+                  </li>
+                  <li>
                     <a href="#odps-offers-8-standardized-options-to-define-and-measure-data-quality-with-everything-as-code-monitoring" class="toc-h2 toc-link" data-title="ODPS offers 8 standardized options to define and measure data quality with Everything as Code monitoring">ODPS offers 8 standardized options to define and measure data quality with Everything as Code monitoring</a>
                   </li>
                   <li>
@@ -1229,28 +1238,45 @@ Development of the specification is under the umbrella of the Linux Foundation. 
           <span class="na">displaytitle</span><span class="pi">:</span>
             <span class="na">en</span><span class="pi">:</span> <span class="s">Extended Data Quality dimension</span>
 
-</code></pre></div>
+</code></pre></div><h3 id='data-quality-configuration'>Data Quality Configuration</h3>
 <p>Data quality is essential for one main reason: You give customers the best experience when you make decisions using accurate data. A great customer experience leads to happy customers, brand loyalty, and higher revenue for your business. Information is only valuable if it is of high quality.  </p>
 
 <p>By adhering to defined quality characteristics, organizations can maximize the value of their data assets, improve decision-making, enhance operational efficiency, and maintain trust and confidence in their data-driven processes and systems. ODPS is compatible with EDM Council data quality model.</p>
 
-<p>How can you assess your data quality? The ODPS support &quot;as code&quot; approach to monitor data quality. Supported DQ tools for Everything as Code to define monitoring are: </p>
+<p>The <code>dataQuality</code> component in ODPS provides a structured and machine-readable way to <strong>declare and monitor the quality characteristics</strong> of a data product. It helps align technical validation with business expectations and supports both human understanding and automated tooling.</p>
+<h4 id='structure-overview'>Structure Overview</h4>
+<p>The <code>dataQuality</code> object consists of two parts:</p>
 
 <ul>
-<li>SodaCL</li>
-<li>MonteCarlo</li>
-<li>DQOps</li>
-<li>Custom (in-house solutions)</li>
+<li><strong><code>declarative</code></strong>: Captures target levels for defined quality dimensions like <code>accuracy</code>, <code>completeness</code>, or <code>timeliness</code>. These values represent your <strong>intended</strong> or <strong>promised</strong> quality levels.</li>
+<li><strong><code>executive</code></strong>: Allows integration with supported <em>Everything as Code</em> tools (e.g., SodaCL, DQOps, MonteCarlo) to define <strong>verifiable</strong> and <strong>executable</strong> rules that check whether those targets are met in practice.</li>
 </ul>
 
-<p><strong>Structure notes:</strong> The Data Quality object is divided into 2 parts: declarative and executable. </p>
+<p>This structure ensures that both expectations and enforcement logic are documented and machine-actionable in the same place.</p>
 
+<hr>
+<h3 id='referencing-capability'>Referencing Capability</h3>
+<p>One of the key features of ODPS is the ability to <strong>reuse</strong> named data quality profiles via references. For example, quality profiles such as <code>default</code>, <code>premium</code>, or <code>gold</code> can be defined once under <code>dataQuality.declarative</code> and referenced elsewhere in the YAML—such as in SLA definitions, pricing plans, or tiered service offerings.</p>
+<h4 id='benefits-of-referencing'>Benefits of Referencing:</h4>
 <ul>
-<li>Declarative part defines the dimensions and aimed/intended data quality levels in defined unit. </li>
-<li>Executable part contains the machine-readable &quot;as code&quot; rules to validate data quality dimensions. The code inside <em>spec</em> element is intended to be injected as in supporting data quality platforms in their defined format and structure.<br></li>
+<li><strong>DRY Principle</strong>: Avoid repetition. Define once, reference many times.</li>
+<li><strong>Clarity</strong>: Consumers of your data product can easily see which quality profile is associated with a particular service tier or access plan.</li>
+<li><strong>Scalability</strong>: You can support multiple audiences or markets with varying quality expectations.</li>
+<li><strong>Auditability</strong>: Clearly link machine-readable checks to business commitments.</li>
 </ul>
 
-<p>The QA object is general in nature and should be enough for common (80%) use cases. Note that you can make extensions to the standard with &quot;x-&quot; mechanism in order to fulfill any industry specific needs. The <a href="#specification-extensions">&quot;Specification extensions&quot;</a> section provides details on how to use this feature. </p>
+<hr>
+<h3 id='the-role-of-default'>The Role of <code>default</code></h3>
+<p>The <code>default</code> quality profile is <strong>mandatory</strong> whenever the <code>dataQuality</code> object is used. It acts as the <strong>baseline</strong> definition, ensuring there is always a clear and predictable quality configuration, even when no referencing is used.</p>
+
+<p>You should use the <code>default</code> profile when:
+- You want to describe core quality expectations for the product.
+- You don’t yet need pricing or SLA-specific variations.
+- You want to ensure future compatibility with advanced features such as AI agents, data marketplaces, or automated governance.</p>
+
+<p>This makes the <code>default</code> profile both a <strong>minimum requirement</strong> and a <strong>best practice</strong> for clarity and interoperability.</p>
+
+<hr>
 <h2 id='odps-offers-8-standardized-options-to-define-and-measure-data-quality-with-everything-as-code-monitoring'>ODPS offers 8 standardized options to define and measure data quality with Everything as Code monitoring</h2>
 <table><thead>
 <tr>
