deploy: caaa8dd3336b23abbb8faeb5e70545a1b71b026f

--- a/index.html
+++ b/index.html
@@ -375,9 +375,6 @@
             <a href="#data-quality" class="toc-h1 toc-link" data-title="Data Quality">Data Quality</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#data-quality-configuration" class="toc-h2 toc-link" data-title="Data Quality Configuration">Data Quality Configuration</a>
-                  </li>
-                  <li>
                     <a href="#structure-overview" class="toc-h2 toc-link" data-title="Structure Overview">Structure Overview</a>
                   </li>
                   <li>
@@ -1244,7 +1241,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
           <span class="na">displaytitle</span><span class="pi">:</span>
             <span class="na">en</span><span class="pi">:</span> <span class="s">Extended Data Quality dimension</span>
 
-</code></pre></div><h2 id='data-quality-configuration'>Data Quality Configuration</h2>
+</code></pre></div>
 <p>Data quality is essential for one main reason: You give customers the best experience when you make decisions using accurate data. A great customer experience leads to happy customers, brand loyalty, and higher revenue for your business. Information is only valuable if it is of high quality.  </p>
 
 <p>By adhering to defined quality characteristics, organizations can maximize the value of their data assets, improve decision-making, enhance operational efficiency, and maintain trust and confidence in their data-driven processes and systems. ODPS is compatible with EDM Council data quality model.</p>
